# DEMEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  shader.frag  shader.vert
examples/: shader.frag  shader.vert  text.frag  text.vert
include/core/: dem.h
include/core/Components/: CameraComponent.h  MeshRenderer.h  TextRenderer.h  TransformComponent.h
include/core/ECS/: Component.h  Entity.h  ecs.h  ecs_impl.h
include/core/Engine/: Camera.h  Image.h  Material.h  Mesh.h  Object.h  Scene.h
include/core/InputSystem/: Input.h  KeyCodes.h
include/core/Logger/: Logger.h
include/core/Renderer/: ElementBuffer.h  GLImage.h  GLProgram.h  Render.h  Shader.h  TextRendering.h  VertexArray.h  VertexBuffer.h
include/core/math/: mat.h  uid.h  vec.h
include/core/time/: time.h
include/glad/: glad.h
src/app/: main.cpp
src/core/: CMakeLists.txt  WinDLL.cpp  glad.c
src/core/Components/: CameraComponent.cpp  MeshRenderer.cpp  TextRenderer.cpp  TransformComponent.cpp
src/core/ECS/: Entity.cpp  ecs.cpp
src/core/Engine/: Camera.cpp  Image.cpp  Material.cpp  Mesh.cpp  Object.cpp
src/core/InputSystem/: Input.cpp
src/core/Logger/: Logger.cpp
src/core/Renderer/: ElementBuffer.cpp  GLImage.cpp  GLProgram.cpp  Renderer.cpp  Shader.cpp  TextRendering.cpp  VertexArray.cpp  VertexBuffer.cpp
src/core/math/: dot.cpp  mat2.cpp  mat3.cpp  mat4.cpp  normal.cpp  normalize.cpp  uid.cpp  vec2.cpp  vec3.cpp  vec4.cpp
src/core/time/: time.cpp
